styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'SF Pro Display', sans-serif
}

body{
    font-family: ‘SF Pro Display’,
        sans-serif;   
    margin:40px auto;
    line-height:1;
    font-size:25px;
    color:rgb(60, 60, 60);
    background-color:#FAF9F6;
    padding:0;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    flex-direction: column;
    }

h1,h2{
    line-height:1.5
    }

h3 {
    margin-bottom: 20px;
    font-weight: 500;
    }    

footer{
    font-size:12px;
    padding: 5px;
    text-align: center;
    bottom: 0;
    position: relative;
    width: 100%;
    }   

input::file-selector-button, input[type=submit], input[type=file]{
    background-color: #FAF9F6;
    color: rgb(60, 60, 60);
    box-shadow: 0 8px 20px -10px rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    transition-duration: 0.4s;
    cursor: pointer;
    }

input[type=file]{
    border:none;
    }

input[type=submit]:hover{
    background-color: #689897b3;
    }

input::file-selector-button:hover{
    background-color: #689897b3;
    }

.container {
    max-width: 450px;
    width: 100%;
    padding: 30px;
    border-radius: 20px;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    }

.drag-area {
    border-radius: 15px;
    height: 175px;
    border: 3px dashed #e0eafc;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin: 10px auto;
    }

.drag-area .icon {
    font-size: 45px;
    }

.drag-area .header {
    font-size: 17px;
    font-weight: 400;
    }
 
.drag-area .button {
    font-weight: 500;
    color: #1683ff;
    cursor: pointer;
    }    

.drag-area.active {
    border: 2px solid #e0eafc;
    }    

